Revise for reviews after with @agitrubard