@@ -7,7 +7,6 @@ import com.ays.common.util.exception.model.AysError;
 import com.ays.institution.model.Institution;
 import com.ays.institution.model.dto.response.InstitutionsSummaryResponse;
 import com.ays.institution.model.entity.InstitutionBuilder;
-import com.ays.institution.model.enums.InstitutionStatus;
 import com.ays.institution.model.mapper.InstitutionToInstitutionsSummaryResponseMapper;
 import com.ays.institution.service.InstitutionService;
 import com.ays.util.AysMockMvcRequestBuilders;
@@ -18,9 +17,7 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilder;
 import org.springframework.test.web.servlet.result.MockMvcResultHandlers;
 
-import java.util.Arrays;
 import java.util.List;
-
 
 class InstitutionControllerTest extends AbstractRestControllerTest {
 
@@ -34,35 +31,22 @@ class InstitutionControllerTest extends AbstractRestControllerTest {
     private static final String BASE_PATH = "/api/v1/institutions";
 
     @Test
-    void givenNothing_whenInstitutionStatusActive_thenReturnListInstitutionResponse() throws Exception {
+    void whenInstitutionStatusActive_thenReturnListInstitutionResponse() throws Exception {
 
-        String mockAccessToken = mockSuperAdminToken.getAccessToken();
-
-        Institution institution1 = new InstitutionBuilder()
-                .withValidFields()
-                .withStatus(InstitutionStatus.ACTIVE)
-                .build();
-
-        Institution institution2 = new InstitutionBuilder()
-                .withValidFields()
-                .withStatus(InstitutionStatus.ACTIVE)
-                .build();
-
-
-        List<Institution> mockInstitutions = Arrays.asList(
-                institution1,
-                institution2
+        // When
+        List<Institution> mockActiveInstitutions = List.of(
+                new InstitutionBuilder().withValidFields().build(),
+                new InstitutionBuilder().withValidFields().build()
         );
 
-        // when
-        Mockito.when(institutionService.getSummaryOfActiveInstitutions()).thenReturn(mockInstitutions);
+        Mockito.when(institutionService.getSummaryOfActiveInstitutions()).thenReturn(mockActiveInstitutions);
 
-        // then
-        List<InstitutionsSummaryResponse> mockInstitutionResponseList = institutionToInstitutionsSummaryResponseMapper.map(mockInstitutions);
-        AysResponse<List<InstitutionsSummaryResponse>> mockAysResponse = AysResponse.successOf(mockInstitutionResponseList);
+        // Then
+        List<InstitutionsSummaryResponse> mockActiveInstitutionsSummaryResponses = institutionToInstitutionsSummaryResponseMapper.map(mockActiveInstitutions);
+        AysResponse<List<InstitutionsSummaryResponse>> mockAysResponse = AysResponse.successOf(mockActiveInstitutionsSummaryResponses);
 
         mockMvc.perform(AysMockMvcRequestBuilders
-                        .get(BASE_PATH.concat("/summary"), mockAccessToken))
+                        .get(BASE_PATH.concat("/summary"), mockSuperAdminToken.getAccessToken()))
                 .andDo(MockMvcResultHandlers.print())
                 .andExpect(AysMockResultMatchersBuilders.status().isOk())
                 .andExpect(AysMockResultMatchersBuilders.time()
@@ -76,17 +60,14 @@ class InstitutionControllerTest extends AbstractRestControllerTest {
 
     }
 
-
     @Test
-    void givenNothing_whenUserUnauthorizedForSummary_thenReturnAccessDeniedException() throws Exception {
+    void whenUserUnauthorizedForSummary_thenReturnAccessDeniedException() throws Exception {
 
-
-        String mockAccessToken = mockUserToken.getAccessToken();
-
-
+        // When
         MockHttpServletRequestBuilder mockHttpServletRequestBuilder = AysMockMvcRequestBuilders
-                .get(BASE_PATH.concat("/summary"), mockAccessToken);
+                .get(BASE_PATH.concat("/summary"), mockUserToken.getAccessToken());
 
+        // Then
         AysResponse<AysError> mockResponse = AysResponseBuilder.FORBIDDEN;
         mockMvc.perform(mockHttpServletRequestBuilder)
                 .andDo(MockMvcResultHandlers.print())
@@ -95,7 +76,6 @@ class InstitutionControllerTest extends AbstractRestControllerTest {
                 .andExpect(AysMockResultMatchersBuilders.httpStatus().value(mockResponse.getHttpStatus().name()))
                 .andExpect(AysMockResultMatchersBuilders.isSuccess().value(mockResponse.getIsSuccess()))
                 .andExpect(AysMockResultMatchersBuilders.response().doesNotExist());
-
     }
 
 }
